perbaikan di ticketcontroller
