# storage/api-docs/api-docs.json
@@ -4,24 +4,24 @@
         "title": "Tickets Service API Documentation",
         "description": "L5 Swagger OpenApi API Documentation for Tickets Microservice",
         "contact": {
-            "email": "bayu@example.com"
+            "email": "bayusamudera@example.com"
         },
         "version": "1.0.0"
     },
     "servers": [
         {
-            "url": "http://localhost:8000/api",
+            "url": "http://localhost:8000",
             "description": "Local Tickets Service API Server"
         }
     ],
     "paths": {
-        "/v1/tickets": {
+        "/api/v1/tickets": {
             "get": {
                 "tags": [
                     "Tickets"
                 ],
                 "summary": "Get list of tickets (Collection)",
-                "operationId": "b24862a7465a2e305137ed018318c559",
+                "operationId": "b406702bcd80642f4b5c83c1bf20105b",
                 "responses": {
                     "200": {
                         "description": "List of tickets retrieved successfully",
@@ -67,7 +67,7 @@
                     "Tickets"
                 ],
                 "summary": "Create a new ticket (Action)",
-                "operationId": "e444e16ae5a817b1d9dfab4a0a8c05da",
+                "operationId": "80fbef860b264eed3bc3ccd90d8ddc8b",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -138,13 +138,13 @@
                 ]
             }
         },
-        "/v1/tickets/{id}": {
+        "/api/v1/tickets/{id}": {
             "get": {
                 "tags": [
                     "Tickets"
                 ],
                 "summary": "Get details of a specific ticket (Resource)",
-                "operationId": "0b452e6cf7f3247299550c350fbf88ed",
+                "operationId": "596302276f442d583400ce2abf22cb00",
                 "parameters": [
                     {
                         "name": "id",
@@ -223,7 +223,7 @@
         "securitySchemes": {
             "ApiKeyAuth": {
                 "type": "apiKey",
-                "description": "Enter NIM Key to access the endpoints",
+                "description": "Masukkan NIM untuk mengakses endpoint",
                 "name": "X-IAE-KEY",
                 "in": "header"
             }
